--- a/notebooks/lab4.ipynb
+++ b/notebooks/lab4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        " '1. Продумайте контент-стратегию!')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "\twith 4149 stored elements in Compressed Sparse Column format>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,34 +234,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update(embedding, idx, max_indicies, delta, nu):\n",
-    "    p = emb.data[:, idx][:, max_indicies]\n",
-    "    print(p)\n",
-    "    g = emp.sigma[:, idx][:, max_indicies]\n",
-    "    emb.sigma[:, idx][:, max_indicies] += delta**2\n",
-    "    emp.data[:, idx][:, max_indicies] -= delta * nu / (np.sqrt(g) + eps)"
+    "# def update(embedding, idx, max_indicies, delta, nu):\n",
+    "#     p = emb.data[:, idx][:, max_indicies]\n",
+    "#     print(p)\n",
+    "#     g = emp.sigma[:, idx][:, max_indicies]\n",
+    "#     emb.sigma[:, idx][:, max_indicies] += delta**2\n",
+    "#     emp.data[:, idx][:, max_indicies] -= delta * nu / (np.sqrt(g) + eps)\n",
+    "def update(w, h, g_t, mask, lr=0.001, epsilon=1e-7):\n",
+    "    h_new = h + g_t * g_t\n",
+    "    w_new = w - lr * g_t / (np.sqrt(h_new) + epsilon)\n",
+    "    w_new = np.where(mask, w_new, w)\n",
+    "    return w_new, h_new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate(matrix, idx):\n",
-    "    res = matrix[:, idx]\n",
-    "    maximum = np.max(res, axis=1)\n",
-    "    max_indicies = np.argmax(res, axis=1)\n",
-    "    return maximum, max_indicies"
+    "def agg(w, x):\n",
+    "    res = np.multiply(w, x.todense().transpose()).max(axis=0)\n",
+    "    mask = (np.vstack([res for i in range(w.shape[0])]) == w)\n",
+    "    #print(mask.shape)\n",
+    "    return res, mask # mask show values to update\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,13 +275,13 @@
     "    \n",
     "    descr_emb = [emb(data[i][2]) for i in range(n_test)]\n",
     "    \n",
-    "    # я так понял, что нужно посчитать сумму bool(i in top_k)\n",
-    "#     recall = count(1:n_test) do i\n",
-    "#         title_emb = emb(data[i][1])\n",
-    "#         i in top_k(vec(title_emb' * descr_emb), k)\n",
-    "#     end\n",
+    "    recall = []\n",
     "    \n",
-    "    return recall / n_test"
+    "    for i in range(n_test):\n",
+    "        title_emb = emb(data[i][1])\n",
+    "        recall.push(i in top_k(np.transpose(title_emb) * descr_emb, k))\n",
+    "    \n",
+    "    return np.count_nonzero(recall) / n_test"
    ]
   },
   {
@@ -285,8 +290,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train2(emb, idx, nu):\n",
-    "        "
+    "def train2(emb: Embedding, idx, nu):\n",
+    "    embs = emb.sigma[idx]\n",
+    "    delta_s = backward_hinge(*embs)\n",
+    "    if delta_sis None:\n",
+    "        return nothing\n",
+    "    \n",
+    "    for i, delta in zip(idx, delta_s)\n",
+    "        update!(emb, i, delta, nu)\n"
    ]
   },
   {
